# reqwest-timeout-minimum-reproducible-example

./: Cargo.toml
src/: lib.rs
