[package]
name = "reqwest-timeout"
version = "0.1.0"
authors = ["LukeMathWalker <contact@palmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
actix-rt = { version = "2.0.0-beta.1" }
reqwest = "0.11.0"
tokio = { version = "1.0.2", features = ["full"] }
wiremock = "0.4.7"
